# mkdocs-ezglossary

./: .flake8  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  release.yml  static.yml
docs/: configuration.md  configurtion.md  definitions.md  getting_started.md  index.md  process.drawio  releases.md  sections.md  usage.md
docs/css/: extra.css
docs/usage/: api.md  customization.md  default.md  definition.md  index.md  linking.md  pagerefs.md  sections.md  summary.md
etc/: requirements.txt
src/mkdocs_ezglossary_plugin/: glossary.py  plugin.py  plurals.py  template.py
src/mkdocs_ezglossary_plugin/templates/: definition.html  glossary.html  link.html  refs-list.html  refs-short.html  summary-detailed.html  summary-table.html  summary.html
src/mkdocs_glossary_plugin/: glossary.py
tests/: conftest.py  mock.py  test_definitions.py  test_glossary.py  test_helpers.py  test_link.py  test_page_ref.py  test_summary.py  test_tooltip_preserve_text.py
tests/custom/: glossary.html  summary.html
