[metadata]
name = mkdocs-ezglossary-plugin
version = 2.0.0a1
description = manage multiple glossaries in mkdocs
keywords = mkdocs, glossary, plugin, references, links
long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Homepage = https://github.com/realtimeprojects/mkdocs-ezglossary
    Bug Tracker = https://github.com/realtimeprojects/mkdocs-ezglossary/issues
    Documentation = https://realtimeprojects.github.io/mkdocs-ezglossary

[options.packages.find]
where=src

[options]
package_dir=
    =src
packages = mkdocs_ezglossary_plugin
include_package_data = True
install_requires =
    mkdocs >= 1.1.0
    jinja2
    inflect

[options.package_data]
mkdocs_ezglossary_plugin=
    templates/*.html 

[wheel]
universal=1

[options.entry_points]
mkdocs.plugins =
    ezglossary  = mkdocs_ezglossary_plugin.plugin:GlossaryPlugin
